--- a/public/index.html
+++ b/public/index.html
@@ -6,54 +6,109 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Ticket Template</title>
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="shortcut icon" href="images/avatar.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="images/icono.png" type="image/x-icon"/>
   </head>
   <body>
     <div class="ticket">
       <div class="ticket__header">
-        <div class="ticket__header-logo"><img src="images/dimexsa.png"/></div>
-        <div class="ticket__header-description"><strong>DIMEXSA S.A.C.</strong><small>RUC: 20360945325</small><small>Auxiliar Panamericana Nte. 439, Chimbote</small><span class="ticket-number">Factura electrónica</span><strong>F001-00000001</strong></div>
+        <div class="ticket__header-logo"><img src="images/logo.png"/></div>
+        <div class="ticket__header-description">
+          <div class="title">DIMEXSA S.A.C.</div><small class="description">RUC: 20360945325</small>
+          <div class="description"><strong>Dirección Fiscal:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
+          <div class="description">  <strong>Punto de venta:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
+          <div class="description">dimexsa.msn.com - 999999999</div>
+          <div class="divider">divider</div>
+          <div class="title">Factura electrónica</div>
+          <div class="title">F001-00000001</div>
+        </div>
       </div>
-      <div class="ticket__body"><strong>DNI/RUC</strong><span>10701296767</span><strong>Señor(es)</strong><span>Alexander Estevan Tume Naquiche</span><strong>Dirección</strong><span>Amp. Nueva Generación Mz B Lt 3</span>
+      <div class="ticket__body">
+        <table>
+          <tr>
+            <td><strong>Fecha</strong></td>
+            <td>: 04-06-2019</td>
+            <td><strong>Hora</strong></td>
+            <td>: 23:00</td>
+          </tr>
+          <tr>
+            <td><strong>DNI/RUC</strong></td>
+            <td colspan="3">: 10701296767</td>
+          </tr>
+          <tr>
+            <td> <strong>R. SOCIAL</strong></td>
+            <td colspan="3">: Alexander Estevan Tume Naquiche</td>
+          </tr>
+          <tr>
+            <td><strong>Dirección</strong></td>
+            <td colspan="3">: Amp. Nueva Generación Mz B Lte 3</td>
+          </tr>
+        </table>
         <table>
           <thead>
             <tr>
-              <th colspan="3" rowspan="1">Descripción del producto</th>
-            </tr>
-            <tr>
-              <th class="numeric" colspan="1" rowspan="1" style="width: 8%">Item</th>
-              <th class="numeric" colspan="1" rowspan="1">Cantidad</th>
-              <th class="numeric" colspan="1" rowspan="1">Precio</th>
+              <th>Producto</th>
+              <th class="numeric">Cant.</th>
+              <th class="numeric">U.Med.</th>
+              <th class="numeric">Precio</th>
+              <th class="numeric">Importe</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td class="numeric" colspan="1" rowspan="2">1</td>
-              <td colspan="3" rowspan="1">Gasolina 85</td>
+              <td colspan="5">GASOHOL 90</td>
             </tr>
             <tr>
-              <td class="numeric" colspan="1" rowspan="1">1 GLI</td>
-              <td class="numeric" colspan="1" rowspan="1">12.71</td>
+              <td class="numeric" colspan="2">1.00</td>
+              <td class="numeric">GLI</td>
+              <td class="numeric">10.00</td>
+              <td class="numeric">10.00</td>
+            </tr>
+            <tr>
+              <td class="divider" colspan="5">divider</td>
             </tr>
           </tbody>
           <tfoot>
             <tr>
               <td colspan="2" rowspan="1">Op. Gravadas</td>
-              <td colspan="1" rowspan="1">12.71</td>
+              <td colspan="1" rowspan="1">S/</td>
+              <td class="numeric" colspan="2" rowspan="1">12.71</td>
             </tr>
             <tr>
-              <td colspan="2" rowspan="1">Igv</td>
-              <td colspan="1" rowspan="1">2.29</td>
+              <td colspan="2" rowspan="1">I.G.V. (18%)</td>
+              <td colspan="1" rowspan="1">S/</td>
+              <td class="numeric" colspan="2" rowspan="1">2.29</td>
             </tr>
             <tr>
-              <td colspan="2" rowspan="1">Total Venta</td>
-              <td colspan="1" rowspan="1">15.00</td>
+              <td colspan="2" rowspan="1">Importe Venta</td>
+              <td colspan="1" rowspan="1">S/</td>
+              <td class="numeric" colspan="2" rowspan="1">15.00</td>
+            </tr>
+            <tr>
+              <td class="divider" colspan="5">divider</td>
+            </tr>
+            <tr>
+              <td colspan="1"><strong>SON</strong></td>
+              <td colspan="4">: QUINCE 00/100 SOLES</td>
+            </tr>
+            <tr>
+              <td><strong> USUARIO</strong></td>
+              <td colspan="2">: TUNAQUI</td>
+              <td><strong>TURN0</strong></td>
+              <td>: 01</td>
+            </tr>
+            <tr>
+              <td><strong> PLACA</strong></td>
+              <td colspan="2">: ---</td>
+              <td><strong>LADO</strong></td>
+              <td>: A</td>
             </tr>
           </tfoot>
         </table>
-        <div class="ticket__qr"><img src="images/qr.png" alt="Representación impresa"/><small>Representación impresa</small></div>
+        <div class="ticket__qr">
+          <div><img src="images/qr.png" alt="Representación impresa"/></div><small class="upper">Representación impresa de la factura electrónica.</small>
+        </div>
       </div>
-      <div class="ticket__footer"><small>Autorizado mediante resolución N°1055/SUNAT.</small><small>Consulte la válidez de este comprobante en <a href="http://e-facturas.delusa.pe/">e-facturas.delusa.pe</a></small><br/><strong>~ DIMEXSA ~</strong>
+      <div class="ticket__footer"><small>Autorizado mediante resolución N°1055/SUNAT.</small><small>Consulte la válidez de este comprobante en <a href="https://e-consulta.sunat.gob.pe/ol-ti-itconsvalicpe/ConsValiCpe.htm">e-consulta.sunat.gob.pe/ol-ti-itconsvalicpe/ConsValiCpe.htm</a></small><br/><strong>~ DIMEXSA ~</strong>
         <address>Gracias por tu preferencia</address>
       </div>
     </div>
