Mejoras en version PDF

--- a/public/invoice.html
+++ b/public/invoice.html
@@ -9,18 +9,18 @@
     <link rel="shortcut icon" href="images/icono.png" type="image/x-icon"/>
   </head>
   <body>
-    <div class="invoice">
+    <div class="pdf">
       <div class="header">
         <div class="header__logo"><img src="images/logo.png"/></div>
         <div class="header__description">
           <div class="title">DIMEXSA S.A.C.</div><small class="description">RUC: 20360945325</small>
           <div class="description"><strong>Dirección Fiscal:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
-          <div class="description">  <strong>Punto de venta:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
+          <div class="description">  <strong>Sucural:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
           <div class="description">dimexsa.msn.com - 999999999</div>
         </div>
         <div class="header__number">
-          <div class="title">Factura electrónica</div>
-          <div class="title">F001-00000001</div>
+          <div class="title">Boleta de Venta Electrónica</div>
+          <div class="title">B001-00000001</div>
         </div>
       </div>
       <div class="body">
@@ -58,14 +58,14 @@
             <tr>
               <td>SERVICIO DE TRANSPORTE DE GASOHOL 90 CALLAO - CAÑETE</td>
               <td class="numeric">2.000</td>
-              <td class="numeric">GLI</td>
+              <td class="numeric">GL</td>
               <td class="numeric">10.00</td>
               <td class="numeric">20.00</td>
             </tr>
             <tr>
               <td>GASOHOL 90</td>
               <td class="numeric">2.000</td>
-              <td class="numeric">GLI</td>
+              <td class="numeric">GL</td>
               <td class="numeric">10.00</td>
               <td class="numeric">20.00</td>
             </tr>
