--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
         <div class="header__description">
           <div class="title">DIMEXSA S.A.C.</div><small class="description">RUC: 20360945325</small>
           <div class="description"><strong>Dirección Fiscal:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
-          <div class="description">  <strong>Punto de venta:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
+          <div class="description">  <strong>Sucural:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
           <div class="description">dimexsa.msn.com - 999999999</div>
         </div>
         <div class="header__number">
-          <div class="title">Factura electrónica</div>
-          <div class="title">F001-00000001</div>
+          <div class="title">Boleta de Venta Electrónica</div>
+          <div class="title">B001-00000001</div>
         </div>
       </div>
       <div class="body">
