--- a/public/invoice.html
+++ b/public/invoice.html
@@ -13,10 +13,11 @@
       <div class="header">
         <div class="header__logo"><img src="images/logo.png"/></div>
         <div class="header__description">
-          <div class="title">DIMEXSA S.A.C.</div><small class="description">RUC: 20360945325</small>
+          <div class="title">DIMEXSA S.A.C.</div>
+          <div class="ruc">RUC: 20360945325</div>
           <div class="description"><strong>Dirección Fiscal:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
           <div class="description">  <strong>Sucural:</strong><span> Auxiliar Panamericana Nte. 439, Chimbote - Santa - Ancash</span></div>
-          <div class="description">dimexsa.msn.com - 999999999</div>
+          <div class="email">dimexsa.msn.com - 999999999</div>
         </div>
         <div class="header__number">
           <div class="title">Boleta de Venta Electrónica</div>
